--- a/comptador.html
+++ b/comptador.html
@@ -4,51 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JSON Table Display</title>
-  <style>
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    table, th, td {
-      border: 1px solid black;
-    }
-    th, td {
-      padding: 8px;
-      text-align: center;
-    }
-    .counter {
-      font-size: 24px;
-      font-weight: bold;
-      margin-top: 20px;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="counter">
-    <span id="counter-tro">Tro: 0</span> | <span id="counter-llamp">Llamp: 0</span>
-  </div>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Points</th>
-        <th>Winner</th>
-      </tr>
-    </thead>
-    <tbody id="table-body">
-      <!-- Table rows will be inserted here by JavaScript -->
-    </tbody>
-  </table>
-
-  <script>
+<div>
+<table class="counter" style="border-collapse: collapse; width: 100%;" border="1">
+<tbody>
+<tr>
+<td style="width: 49.9288%;"><img class="post__image post__image--center" src="file:///C:/Users/mtome/Documents/MEGAsync/Informatica/Publii/Webs guardades/cjllampsitronsgithubio/input/media/posts/1/DEU-TRO.png" alt="" width="218" height="155"></td>
+<td style="width: 49.9288%;"><img class="post__image post__image--center" src="file:///C:/Users/mtome/Documents/MEGAsync/Informatica/Publii/Webs guardades/cjllampsitronsgithubio/input/media/posts/1/DEU-LLAMP.png" alt="" width="220" height="157"></td>
+</tr>
+<tr>
+<td class="align-center" style="width: 49.9288%;"><strong><span id="counter-tro">0</span></strong></td>
+<td class="align-center" style="width: 49.9288%;"><strong><span id="counter-llamp">0</span></strong></td>
+</tr>
+</tbody>
+</table>
+<hr></div>
+<table>
+<thead>
+<tr>
+<th class="align-left" style="font-weight: bold;">Prova</th>
+<th class="align-left" style="font-weight: bold;">Punts</th>
+<th class="align-left" style="font-weight: bold;">Guanyador</th>
+</tr>
+</thead>
+<tbody id="table-body"><!-- Table rows will be inserted here by JavaScript --></tbody>
+</table>
+<p>
+<script>
     // Function to fetch the JSON data and populate the table and counters
     async function loadJSON() {
       try {
         // Fetch the JSON file (assuming it is named 'data.json' and is in the same folder)
-        const response = await fetch('data.json');
+        const response = await fetch('https://cj-llampsitrons.github.io/comptador/data.json');
         const data = await response.json();
 
         // Variables to hold the points for 'tro' and 'llamp'
@@ -61,7 +47,7 @@
         // Loop through the elements in the JSON
         data.elements.forEach(element => {
           // Check for unknown winner and set it to "Sense guanyador" if necessary
-          const winner = (element.winner === 'tro' || element.winner === 'llamp') ? element.winner : 'Sense guanyador';
+          const winner = (element.winner === 'Trons' || element.winner === 'Llamps') ? element.winner : 'Sense guanyador';
 
           // Create a new row for each element
           const row = document.createElement('tr');
@@ -81,16 +67,16 @@
           tableBody.appendChild(row);
 
           // Update counters based on the winner
-          if (winner === 'tro') {
+          if (winner === 'Trons') {
             troPoints += element.points;
-          } else if (winner === 'llamp') {
+          } else if (winner === 'Llamps') {
             llampPoints += element.points;
           }
         });
 
         // Update the counter display
-        document.getElementById('counter-tro').textContent = `Tro: ${troPoints}`;
-        document.getElementById('counter-llamp').textContent = `Llamp: ${llampPoints}`;
+        document.getElementById('counter-tro').textContent = `${troPoints}`;
+        document.getElementById('counter-llamp').textContent = `${llampPoints}`;
 
       } catch (error) {
         console.error('Error loading JSON file:', error);
@@ -100,6 +86,7 @@
     // Call the loadJSON function to fetch data and populate the table
     loadJSON();
   </script>
+</p>
 
 </body>
 </html>
