--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Header Link</title>
+    <title>LliT | Redirigint...</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,43 +13,28 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-            position: absolute;
-            top: 0;
-            width: 100%;
-        }
-        header a {
-            color: #00c;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        header a:hover {
-            text-decoration: underline;
+            background-color: #000000;
         }
         .loader {
-            border: 8px solid #f3f3f3;
-            border-top: 8px solid #3498db;
+            border: 8px solid #fcff5a;
+            border-top: 8px solid #4cb7ff;
             border-radius: 50%;
             width: 50px;
             height: 50px;
-            animation: spin 2s linear infinite;
+            animation: spin 2s cubic-bezier(0.65, 0.05, 0.36, 1) infinite;
         }
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            window.location.replace("https://lacreualtallampsitrons.cat/marcador");
+        });
+    </script>
 </head>
 <body>
-    <header>
-        <a href="https://lacreualtallampsitrons.cat/marcador" target="_blank">Marcador LliT</a>
-    </header>
     <div class="loader"></div>
 </body>
 </html>
